# Chicago

./: .coveragerc  .gitignore  README.md  pyproject.toml  tasks.py
chicago/: app.py  pyproject.toml
chicago/src/: player.py
chicago/src/tests/: app_test.py  player_test.py
data/: database.sqlite  test-database.sqlite
dokumentaatio/: arkkitehtuuri.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: app.py  config.py  deck.py  game_actions.py  game_logic.py  index.py  initialize_database.py  player.py  ui.py
src/entities/: deck.py  player.py
src/game_logic/: game_actions.py
src/repository/: highscore_repository.py
src/tests/: app_test.py  database_test.py  deck_test.py  player_test.py
src/ui/: gameplay_ui.py  menu_ui.py  ui.py
